nav flex-wrap fix

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ a {
 nav ul {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -27,7 +28,6 @@ nav a {
   text-decoration: none;
   color: black;
   font-size: 25px;
-  padding: 60px;
 }
 
 .banner {
